--- a/src/components/assets/CityConditions.scss
+++ b/src/components/assets/CityConditions.scss
@@ -1,6 +1,6 @@
 .city-stats{
   margin-top:70px;
-  color:white;
+  color:black;
   display:flex;
   align-items:center;
   flex-direction: column;
@@ -9,8 +9,4 @@
   display: flex;
   overflow-x: scroll;
   width: 50vw;
-}
-
-.ajustar{
-  transform: translateX(-130px);
 }
